@@ -2,6 +2,7 @@ package de.codecentric.spring.boot.chaos.monkey.endpoints.dto;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import de.codecentric.spring.boot.chaos.monkey.configuration.WatcherProperties;
+import java.util.List;
 import java.util.function.Consumer;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -28,6 +29,8 @@ public class WatcherPropertiesUpdate {
 
   @Nullable private Boolean actuatorHealth;
 
+  @Nullable private List<String> beans;
+
   private <T> void applyTo(T value, Consumer<T> setter) {
     if (value != null) {
       setter.accept(value);
@@ -43,5 +46,6 @@ public class WatcherPropertiesUpdate {
     applyTo(restTemplate, t::setRestTemplate);
     applyTo(webClient, t::setWebClient);
     applyTo(actuatorHealth, t::setActuatorHealth);
+    applyTo(beans, t::setBeans);
   }
 }
