@@ -1,0 +1,7 @@
+package de.codecentric.spring.boot.demo.chaos.monkey.bean;
+
+public class DemoBean {
+  public String sayHello() {
+    return "Hello!";
+  }
+}
