@@ -1,0 +1,8 @@
+package com.example.chaos.monkey.chaosdemo.bean;
+
+public class HelloBean {
+
+  public String sayHello() {
+    return "Hello from Bean";
+  }
+}
