@@ -18,11 +18,13 @@ chaos.monkey.enabled=true
 chaos.monkey.assaults.latencyActive=true
 chaos.monkey.assaults.latencyRangeStart=1000
 chaos.monkey.assaults.latencyRangeEnd=4500
+chaos.monkey.assaults.exceptions-active=false
 chaos.monkey.watcher.controller=true
 chaos.monkey.watcher.component=true
 chaos.monkey.watcher.restController=true
 chaos.monkey.watcher.service=true
 chaos.monkey.watcher.repository=true
+chaos.monkey.watcher.beans=helloBean
 chaos.monkey.assaults.level=1
 management.endpoint.chaosmonkey.enabled=true
 management.endpoint.chaosmonkeyjmx.enabled=false
